--- a/lostreport.css
+++ b/lostreport.css
@@ -14,10 +14,7 @@
 }
 .overlay {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top:0; left:0; width:100%; height:100%;
   background: rgba(255,255,255,0.2);
   z-index: -1;
 }
@@ -77,10 +74,8 @@
   display: none;
   position: fixed;
   z-index: 1000;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
   background: rgba(0,0,0,0.6);
   justify-content: center;
   align-items: center;
@@ -121,8 +116,7 @@
 /* Modal close button */
 .close-btn {
   position: absolute;
-  top: 15px;
-  right: 20px;
+  top: 15px; right: 20px;
   padding: 8px 16px;
   border-radius: 8px;
   background: #13007d;
@@ -171,3 +165,8 @@
   background: #0d0060;
   transform: scale(1.03);
 }
+
+
+
+
+
