--- a/lost.css
+++ b/lost.css
@@ -19,7 +19,7 @@ body {
 
 /* Card styling */
 .card {
-  background:white;
+  background: rgba(255, 255, 255, 0.364);
   max-width:600px;
   margin:50px auto;
   padding:20px;
@@ -68,3 +68,4 @@ button:hover { background:#0f0065; }
   gap:15px;
   margin-top:10px;
 }
+
