--- a/lost.css
+++ b/lost.css
@@ -1,3 +1,5 @@
+
+
 /* Video background */
 .video-background {
   position: fixed;
@@ -22,17 +24,15 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, rgba(0, 0, 0, 0));
+  background: linear-gradient(135deg,  rgba(0, 0, 0, 0,));
   z-index: -1;
 }
-
 /* Body */
 body {
   margin: 0;
   font-family: Arial, sans-serif;
   color: #222;
 }
-
 
 /* Card layout */
 .card {
@@ -163,19 +163,19 @@ button[type="submit"]:hover {
 .row div {
   flex: 1;
 }
+
 /* Camera */
 .camera-container {
   display: flex;
   justify-content: center;
   margin: 20px 0;
 }
+
 #camera {
   width: 100%;
   max-width: 400px;
-  height: 300px;
   border-radius: 8px;
   border: 2px solid #13007d;
-  background: black;
 }
 
 /* Preview image */
@@ -184,8 +184,4 @@ button[type="submit"]:hover {
   max-width: 220px;
   border: 3px solid #13007d;
   border-radius: 8px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
-
